style.css
@keyframes notif {
	0% {
		left: -100vw;
		display: block;
	}

	25% {
		left: 10px;
		display: block;
	}

	75% {
		left: 10px;
		display: block;
	}

	100% {
		left: -100vw;
		display: block;
	}
}

::-webkit-scrollbar {
	width: 10px;
	height:10px
}

::-webkit-scrollbar-track {
	/* -webkit-box-shadow: inset 0 0 1px rgba(255, 255, 255, 1);
	border-radius: 5px; */
}

::-webkit-scrollbar-thumb {
	border-radius: 5px;
	-webkit-box-shadow: inset 0 0 15px #fff;
}

:root {
	--cursor: url("cursors-arrow.png");
	--move: url("cursors-move.png");
}

body {
	background-color: #222;
	color: white;
	font-family: -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
	font-weight: 300;
	font-size: 20px;
	user-select: none;
	overflow: hidden;
	cursor: var(--cursor), auto;
}

* {
	border-radius: 5px;
	cursor: var(--cursor), auto;
}

.popup {
	background-color: #222;
	padding: 10px;
	border:2px solid #333;
	position: fixed;
	left:50vw;
	top:50%;
	transform: translate(-50%,-50%);
	z-index: 101;
	text-align: center;
}

button[default] {
	background-color: #05d;
	border: 1px solid #fff;
	border-radius: 5px;
	color: #fff;
}

button[default]:hover{
	background-color: #27f;
}

.darken {
	width: 100vw;
	height: 100vh;
	background-color: #000;
	opacity: 0.5;
	position: fixed;
	top: 0;
	left: 0;
	z-index: 100;
	display: none;
}

#randomtext {
	z-index: 201;
	opacity: 3;
	color: white;
}

.fullWidth {
	width: 98vw;
}

.halfWidth {
	width: 50vw;
}

.floatRight {
	float: right;
}

.noBorder {
	border: none;
}

a {
	color: #0cf;
}

.hidden {
	display: none;
}

window {
	position: absolute;
	display: flex;
	flex-direction: column;
	border: 1px solid #333;
	background-color: #000;
	touch-action: none;
	border-radius: 5px;
	overflow: hidden;
	width: 300px;
	height: 200px;
	box-sizing: border-box;
	padding: 3px;
	top: 0;
	max-width: calc(100vw - 4rem);
	max-height: calc(100vh - 20px);
	box-shadow: 1px 2px 5px black;
}

taskbar {
	display: block;
	background-color: #05d;
	cursor: var(--cursor);
	touch-action: none;
	border-radius: 3px;
	padding-left: 10px;
	overflow-x: auto;
	height: 30px !important;
}

div.bar {
	float: right;
	background-color: #aab;
	position: block;
	width: 2.5rem;
	height: auto;
	border-radius: 5px;
	padding: 2px;
	box-shadow: 1px 2px 5px black;
	overflow-y: auto;
	max-height: 95vh;
}

baritem {
	border: none;
	border-bottom: 2px solid #222;
	border-radius: 5px;
	text-align: center;
	display: block;
	width: 100%;
	margin-bottom: 5px;
	box-shadow: 1px 2px 5px black;
	background-color: rgba(20, 20, 20, 0.5);
	transition: color, background-color ease-in-out 0.5s;
}

baritem.start {
	font-weight: bolder;
	font-size: 25px;
	border-bottom: 2px solid #05d;
	background-color: #aad;
	border-radius: 5px;
}

baritem.start:hover {
	background-color: #fff;
	color: #0cd;
}

baritem:hover {
	background-color: rgba(20, 20, 20, 0.9);
}

#menu {
	position: absolute;
	left: 0;
	top: 0;
	background-color: rgba(90, 90, 90, 0.9);
	font-size: 10px;
	overflow: auto;
	height: 99vh;
	margin: auto auto;
	backdrop-filter: blur(5px);
	-webkit-backdrop-filter: blur(5px);
}

hin {
	width: 150px;
	height: 150px;
	padding: 0.5em;
}

close {
	/*position: absolute;*/
	top: 0px;
	left: 0px;
	color: #f10;
	float: right;
	margin-right: 10px;
	font-weight: 20em;
	font-size: 20px;
	margin-left: 10px;
}

close:hover {
	color: #f10;
	background-color: #fff;
	border-radius: 5px;
}

button {
	border: 1px solid #05d;
	background-color: #333;
	color: #fff;
	font: inherit;
	padding: 3px;
}

button:hover {
	background-color: #555;
}

button:active {
	border: 1px solid #fff;
}

windowcontent {
	display: block;
	overflow: auto;
	height: 100%;
	margin: 5px;
	background-color: #111;
	border-radius: 5px;
	padding: 5px;
}

notif {
	background-color: #223;
	border: 2px solid #444;
	border-radius: 7px;
	position: absolute;
	top: 0;
	animation-duration: 4s;
	animation-name: notif;
	font-size: 10px;
}

notif.open {
	display: block;
	margin-top: 10px;
	position: relative;
	left: 0;
}

.block {
	display: block;
}

mb {
	font-weight: bold;
}

div.skiptranslate {
	transform: scale(0);
	height: 0;
}

.goog-te-gadget {
	transform: scale(1) !important
}

fullscreen {
	float: right;
}

#apps {
	display: flex;
	scroll-snap-type: x mandatory;
	overflow-x: scroll;
	width: 99%;
	height: auto;
}

.menu-app {
	padding: 20px;
	margin-right: 50px;
	display: inline-block;
	scroll-snap-align: center;
	/* height: 10%; */
	background-color: black;
	width:750px;
}

iframe.win,
canvas.win {
	border: none;
	width: 100%;
	height: 100%;
	background-color: black
}

canvas.win {
	width: 100vw;
	height: 100vh;
}

hr {
	border: 1px solid #05d;
}

textarea{
	background-color: #222;
	box-shadow: inset 2px 2px 2px #fff;
	color:#fff;
}

#ctx{
	background-color: #444;
	padding: 2.5px;
	position: absolute;
	font-size: 15px;
	width: 150px;
	display: none;
	top:0;
	left:0;
}
.ctx-option{
	padding: 2.5px;
	background: #fff1;
	transition: background 0.3s
}
.ctx-option:hover{
	background: #05d;
}

